test/library/packages/UnrolledLinkedList/indexOf/testIndexOfHaltStart.good
testIndexOfHaltStart.chpl:10: error: halt reached - Start index for "unrolledLinkedList.indexOf" out of bounds: -1
